$Id$

2012-12-13  Christian Franke  <franke@computer.org>

	ataprint.cpp: Print Additional Product Identifier (OEM Id).

2012-12-13  Stanislav Brabec  <sbrabec@suse.cz>

	Update FSF postal address in all files.

2012-12-12  Christian Franke  <franke@computer.org>

	smartctl.cpp: Remove include <new> for QNXNTO.
	Should only be needed if placement new is used.
	smartd.cpp: Remove very old _GNU_SOURCE define.
	It was added 10 years ago in r147.  It is not (or no longer) needed
	and has an unwanted side effect (__USE_MINGW_ANSI_STDIO) on MinGW.

2012-12-11  Christian Franke  <franke@computer.org>

	smartd.cpp: Add '-w PATH, --warnexec=PATH' option.
	smartd.8.in: Document this option.

2012-12-11  Christian Franke  <franke@computer.org>

	smartd.cpp: Add '-d ignore' directive.
	smartd.conf.5.in: Document '-d ignore'.  Add DEVICESCAN example.
	Remove duplicate and outdated info about device scanning.
	smartd.8.in: Add notes about RAID controllers to device scanning info.

2012-12-11  Stanislav Brabec  <sbrabec@suse.cz>

	* smartd.initd.in: SUSE: Added sysconfig options to disable
	persistent state writes, attribute log and set arbitrary smartd
	options.

2012-12-03  Christian Franke  <franke@computer.org>

	Avoid usage of strcpy(), strcat(), sprintf().
	Use snprintf() instead or change type to std::string.
	Use array references instead of char pointers for parameters.

2012-12-03  Christian Franke  <franke@computer.org>

	smartd.cpp: Ignore a device from DEVICESCAN if a preceding smartd.conf
	entry for the same device exists.

2012-11-28  Christian Franke  <franke@computer.org>

	smartd.conf.5.in: Document smartd_warning.sh/cmd scripts and
	the new environment variables.
	Makefile.am: Replace smartd_warning.* paths on man pages.
	Reformat long sed commands.

2012-11-27  Christian Franke  <franke@computer.org>

	smartd.cpp: Remove trailing newlines from some MailWarning() strings.
	os_win32/smartd_warning.cmd: Fix SMARTD_MESSAGE with parentheses.
