@@ -357,8 +357,7 @@ SAT defines two ATA PASS THROUGH SCSI commands, one 12 bytes long and
 the other 16 bytes long.  The default is the 16 byte variant which can be
 overridden with either \'\-d sat,12\' or \'\-d sat,16\'.
 
-[NEW EXPERIMENTAL SMARTD FEATURE] If \'-d sat,auto\' is specified,
-device type SAT (for ATA/SATA disks) is
+If \'\-d sat,auto\' is specified, device type SAT (for ATA/SATA disks) is
 only used if the SCSI INQUIRY data reports a SATL (VENDOR: "ATA     ").
 Otherwise device type SCSI (for SCSI/SAS disks) is used.
 
@@ -660,9 +659,9 @@ not supported.  For RAID configurations, this is typically set to
 [Please see the \fBsmartctl \-l scterc\fP command-line option.]
 
 .TP
-.B -e NAME[,VALUE]
-[NEW EXPERIMENTAL SMARTD FEATURE] Sets non\-SMART device settings
-when \fBsmartd\fP starts up and has no further effect.
+.B \-e NAME[,VALUE]
+Sets non\-SMART device settings when \fBsmartd\fP starts up and has no
+further effect.
 [Please see the \fBsmartctl \-\-set\fP command-line option.]
 Valid arguments are:
 
